--- a/OneDrive/Documents/NetBeansProjects/final/public_html/index.html
+++ b/OneDrive/Documents/NetBeansProjects/final/public_html/index.html
@@ -9,6 +9,8 @@ and open the template in the editor.
         <title>BeardClothing</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     </head>
     <body>
         
@@ -39,12 +41,11 @@ and open the template in the editor.
         <!-- Menú principal -->
             <div id="menu">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li class="seleccionado"><a href="#">Blog</a></li>
-                    <li><a href="#"></a>Productos</li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html"></a>Productos</li>
                     <li><a href="#"></a>Tienda</li>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="contactos.html">Contacto</a></li>
                 </ul>
 
                 <div class="clear"></div>
@@ -64,11 +65,11 @@ and open the template in the editor.
 
                         <img src="imagenes/img11.png" alt=""/>
                     </div> <!-- /articulo -->
-                    <!-- Pie de página -->
+                     <!-- Pie de página -->
             <div id="pie">
-            <img src="imagenes/img12.png" alt="" width="30" height="30"/>
-            <img src="imagenes/img10.png" alt="" width="30" height="30"/>
-            <img src="imagenes/img13.png" alt="" width="30" height="30"/>    
+            <img src="imagenes/img12.png" alt="" width="30" height="30"/><p>@Beardclothingrd</p>
+            <img src="imagenes/img10.png" alt="" width="30" height="30"/><p>@Beardclothingrd</p>
+            <img src="imagenes/img13.png" alt="" width="30" height="30"/><p>849-408-5225</p>    
                 <p id="copyright">&copy; BeardClothingRD</p>
             </div> <!-- /pie de página -->
             
