--- a/OneDrive/Documents/NetBeansProjects/final/public_html/index.html
+++ b/OneDrive/Documents/NetBeansProjects/final/public_html/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
             <!--Cabecera-->
         <div id="cabecera">   
             <!--Logo-->
-           
+            <img src="imagenes/logo.png" alt="" width="200" height="200/>
             <h1 id='logo'><a href="#" title="Beard Clothing"> <img src="imagenes/logo.html" alt="" width="250" height="250"/></a></h1>
              <!-- Buscador -->
                 <div id="buscador">
